# AI_S0006D

2018/: CMakeLists.txt  README.md
2018/AI/AI/: AI.vcxproj  CMakeLists.txt
2018/AI/AI/Debug/AI.tlog/: AI.lastbuildstate  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2018/AI/AI/code/: AI.cpp  BaseGameEntity.cpp  BaseGameEntity.h  GameTime.h  Singleton.cpp  Singleton.h  Telegram.h
2018/AIv2/AIv2/: AIv2.sln  AIv2.vcxproj  AIv2.vcxproj.filters
2018/AIv2/AIv2/Debug/: vc142.idb
2018/AIv2/AIv2/Debug/AIv2.tlog/: AIv2.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
2020/PythonAI_1/: BaseGameEntity.py  GameTime.py  GameTime2.py  Humanoid.py  PythonAI_1.py  PythonAI_1.pyproj  PythonAI_1.sln  Telecom.py
2020/PythonAI_2/: Performance.pyperf  PythonAI_2.py  PythonAI_2.pyproj  PythonAI_2.sln
2020/Release/: AI.py  GameTime.py  PythonAI_1.py  Telecom.py
AI/: AI.sln
AI/AI/: AI.vcxproj.filters
AI/AI/Debug/: vc141.idb
AI/AI/Debug/AI.tlog/: CL.command.1.tlog  CL.read.1.tlog
AI/AI/code/: AI.h  BaseGameEntity.cpp  main.cpp
AI/Debug/: AI.ilk
